docs(handlers): Updated endpoints swagger documentation
