# docs/swagger.yaml
@@ -3,143 +3,200 @@ definitions:
   models.Ban:
     properties:
       autoBan:
+        description: Whether the ban was automatic or not
         type: boolean
       banID:
+        description: ID of the ban
         type: integer
       banReason:
+        description: Reason for the ban
         type: string
       bannedAt:
+        description: Date the member was banned
         type: string
       bannerID:
+        description: ID of the user who banned the member
         type: string
       guildID:
+        description: ID of the guild
         type: string
       memberID:
+        description: ID of the member
         type: string
     type: object
   models.Channel:
     properties:
       channelID:
+        description: ID of the channel
         type: string
       guildID:
+        description: ID of the guild
         type: string
       ignored:
+        description: Wether the channel is ignored by the bot or not
         type: boolean
       wpBlacklisted:
+        description: Wether the channel is blacklisted from xp or not
         type: boolean
     type: object
   models.Guild:
     properties:
       allowModeration:
+        description: Whether or not to allow moderation commands
         type: boolean
       banTime:
+        description: Time in days to ban a user for
         type: integer
       disabledCommands:
+        description: List of disabled commands separated by slashes
         type: string
       guildID:
+        description: Guild ID
         type: string
       guildName:
+        description: Name of the guild
         type: string
       lvlChannel:
+        description: Channel ID to send level up messages
         type: string
       lvlReplace:
+        description: Weather or not to replace previous rewards
         type: boolean
       lvlResponse:
+        description: If the level is a multiple of this number, send a level up message
         type: integer
       maxWarns:
+        description: Max number of warnings before a user is banned
         type: integer
       prefix:
+        description: Prefix used for calling the bot
         type: string
       privateWelcomeMsg:
+        description: Message to send when a user joins in DM
         type: string
       reportChannel:
+        description: Channel ID for reporting
         type: string
       welcomeChannel:
+        description: Channel ID to send welcome messages
         type: string
       welcomeMsg:
+        description: Message to send when a user joins
         type: string
     type: object
   models.Member:
     properties:
       guildID:
+        description: Guild ID
         type: string
       joinedAt:
+        description: Date for when the member joined the guild
         format: date-time
         type: string
       left:
+        description: Number of times the member left the guild
         type: integer
       level:
+        description: Level of the member
         type: integer
       memberID:
+        description: Member ID
         type: string
       xp:
+        description: Amount of xp the member has
         type: integer
     type: object
   models.Role:
     properties:
       guildID:
+        description: ID of the guild
         type: string
       ignored:
+        description: Wether the role is ignored by the bot or not
         type: boolean
       isDefault:
+        description: Wether to give the role to new members
         type: boolean
       reward:
+        description: The level corresponding to the reward
         type: integer
       roleID:
+        description: ID of the role
         type: string
       xpBlacklisted:
+        description: Wether the role is blacklisted from xp or not
         type: boolean
     type: object
   models.User:
     properties:
       accessLvl:
+        description: Access level to the api of the user
         type: integer
       banned:
+        description: Whether the user is banned or not
         type: boolean
       createdAt:
+        description: Date the user was created
         type: string
       discordID:
+        description: Discord ID of the user
         type: string
       email:
+        description: Email of the user
         type: string
       username:
+        description: Username of the user
         type: string
     type: object
   models.UserCreation:
     properties:
       discordID:
+        description: Discord ID of the user
         type: string
       email:
+        description: Email of the user
         type: string
       password:
+        description: Password of the user
         type: string
       username:
+        description: Username of the user
         type: string
     type: object
   models.UserModification:
     properties:
       discordID:
+        description: Discord ID of the user
         type: string
       email:
+        description: Email of the user
         type: string
       oldPassword:
+        description: Old password of the user
         type: string
       password:
+        description: New password of the user
         type: string
     type: object
   models.Warn:
     properties:
       guildID:
+        description: ID of the guild
         type: string
       memberID:
+        description: ID of the member
         type: string
       warnID:
+        description: ID of the warn
         type: integer
       warnReason:
+        description: Reason for the warn
         type: string
       warnedAt:
+        description: Date the member was warned
         type: string
       warnerID:
+        description: ID of the user who warned the member
         type: string
     type: object
 host: cardinal.gyroskan.com
@@ -442,6 +499,10 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Member'
+            type: array
         "403":
           description: Forbidden
         "500":
@@ -461,7 +522,7 @@ paths:
         type: string
       - description: Member values
         in: body
-        name: user
+        name: member
         required: true
         schema:
           $ref: '#/definitions/models.Member'
@@ -527,6 +588,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/models.Member'
         "403":
           description: Forbidden
         "404":
@@ -710,7 +773,7 @@ paths:
           description: Forbidden
         "500":
           description: Server Error
-      summary: Reset member from a guild
+      summary: Reset  a member from a guild
       tags:
       - Members
   /guilds/{guildID}/members/{memberID}/warns:
@@ -847,7 +910,7 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
+        "200":
           description: Member reset
         "403":
           description: Forbidden
@@ -855,7 +918,7 @@ paths:
           description: Server Error
       summary: Reset guild's members
       tags:
-      - Members
+      - Guilds
   /guilds/{guildID}/reset:
     post:
       consumes:
@@ -1253,6 +1316,9 @@ paths:
       summary: Register user
       tags:
       - Users
+schemes:
+- https
+- http
 securityDefinitions:
   BearerAuth:
     in: header
